--- a/public/index.html
+++ b/public/index.html
@@ -319,7 +319,7 @@
                   <div class="col-sm-8 col-lg-7 px-5 px-sm-3">
                     <div class="overflow-hidden">
                       <h1 class="fs-4 fs-md-5 lh-1" data-zanim-xs='{"delay":0}'>
-                        Build Your Career With IFER
+                        Directing the Future
                       </h1>
                     </div>
                     <div class="overflow-hidden">
@@ -359,7 +359,7 @@
                   <div class="col-sm-8 col-lg-7 px-5 px-sm-3">
                     <div class="overflow-hidden">
                       <h1 class="fs-4 fs-md-5 lh-1" data-zanim-xs='{"delay":0}'>
-                        Expert Consultants
+                        Cultivating Young Minds
                       </h1>
                     </div>
                     <div class="overflow-hidden">
@@ -399,7 +399,7 @@
                   <div class="col-sm-8 col-lg-7 px-5 px-sm-3">
                     <div class="overflow-hidden">
                       <h1 class="fs-4 fs-md-5 lh-1" data-zanim-xs='{"delay":0}'>
-                        Growth Partners
+                        Instilling Values
                       </h1>
                     </div>
                     <div class="overflow-hidden">
