--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,24 @@
                   >About</a
                 >
               </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="pages/about.html"
+                  role="button"
+                  aria-expanded="false"
+                  >Admissions</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="pages/about.html"
+                  role="button"
+                  aria-expanded="false"
+                  >Achievements</a
+                >
+              </li>
             </ul>
             <a
               class="btn btn-outline-primary rounded-pill btn-sm border-2 d-block d-lg-inline-block ms-auto my-3 my-lg-0"
@@ -272,7 +290,7 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section class="bg-white text-center">
+      <section class="bg-100 text-center">
         <div class="container">
           <div class="row justify-content-center text-center">
             <div class="col-10 col-md-6">
@@ -360,7 +378,7 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section class="pt-0 bg-100">
+      <section class="pt-0">
         <div class="container pb-0">
           <!-- Message from Usthad -->
           <div class="row g-0 flex-center pb-0">
@@ -410,7 +428,7 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section class="">
+      <section class="bg-100">
         <div class="container">
           <div class="text-center mb-6">
             <h3 class="fs-2 fs-md-3">Our Programs</h3>
@@ -574,7 +592,7 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section class="bg-100">
+      <section class="">
         <div class="container">
           <div class="text-center mb-7">
             <h3 class="fs-2 fs-md-3">Why Choose IFER Academy</h3>
