--- a/public/contact.html
+++ b/public/contact.html
@@ -62,7 +62,8 @@
 
   <body>
     
-    <!--Navigation bar-->
+    <!--Navigation bar.-->
+
     <div class="sticky-top navbar-elixir">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
@@ -88,7 +89,7 @@
               <li class="nav-item dropdown">
                 <a
                   class="nav-link"
-                  href="index.html"
+                  href="./index.html"
                   role="button"
                   aria-expanded="false"
                   >Home</a
@@ -101,6 +102,33 @@
                   role="button"
                   aria-expanded="false"
                   >About</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="pages/about.html"
+                  role="button"
+                  aria-expanded="false"
+                  >Admissions</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="pages/achievements.html"
+                  role="button"
+                  aria-expanded="false"
+                  >Achievements</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="./gallery.html"
+                  role="button"
+                  aria-expanded="false"
+                  >Gallery</a
                 >
               </li>
             </ul>
