--- a/public/index.html
+++ b/public/index.html
@@ -115,10 +115,19 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="pages/about.html"
+                  href="pages/achievements.html"
                   role="button"
                   aria-expanded="false"
                   >Achievements</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="./gallery.html"
+                  role="button"
+                  aria-expanded="false"
+                  >Gallery</a
                 >
               </li>
             </ul>
@@ -159,7 +168,7 @@
             <div class="swiper-slide" data-zanim-timeline="{}">
               <div
                 class="bg-holder"
-                style="background-image: url(assets/img/header-2.jpeg)"
+                style="background-image: url(assets/img/header-2.JPG)"
               ></div>
               <!--/.bg-holder-->
 
