--- a/public/pages/admissions.html
+++ b/public/pages/admissions.html
@@ -222,7 +222,7 @@
     <div class="container">
         <div class="row align-items-start">
             <div class="col-md-6 rounded-3">
-                <img src="../assets/img/6.JPG" alt="Admission Process" class="img-fluid rounded-3 shadow">
+                <img src="../assets/img/6.webp" alt="Admission Process" class="img-fluid rounded-3 shadow">
             </div>
             <div class="col-md-6 d-flex flex-column justify-content-start">
                 <h2 class="fw-bold  pt-0 pb-2">Admission at <span class="text-dark">IFER</span></h2>
