--- a/public/gallery.html
+++ b/public/gallery.html
@@ -218,7 +218,7 @@
           </div>
           <div class="col-md-4 mb-4 portfolio-item branding">
             <img
-              src="./assets/img/header-1.JPG"
+              src="./assets/img/header-1.webp"
               alt="Branding 1"
               class="img-fluid"
             />
