--- a/public/index.html
+++ b/public/index.html
@@ -194,8 +194,8 @@
                     </div>
                     <div class="overflow-hidden">
                       <div data-zanim-xs='{"delay":0.2}'>
-                        <a class="btn btn-warning mt-3" href="contact.html"
-                          >Contact us<span
+                        <a class="btn btn-warning mt-3" href="./pages/admissions.html"
+                          >Apply Now<span
                             class="fas fa-chevron-right ms-2"
                           ></span
                         ></a>
